/*
 Localizable.strings
 MapsIndoorsSDK
 
 Created by Daniel Nielsen on 02/08/16.
 Copyright © 2021 MapsPeople. All rights reserved.
 */
"Level" = "Level";
"Level %@" = "Level %@";
"OK" = "OK";
"Get directions" = "Get directions";
"Origin" = "Starting point";
"Destination" = "Destination";
"Choose destination" = "Choose destination";
"Choose starting point" = "Choose starting point";
"Map" = "Map";
"Categories" = "Categories";
"Search" = "Search";
"Search %@" = "Search for %@";
"Show on map" = "Show on map";
"Estimated: %@" = "Estimated: %@";
"From %@" = "from %@";
"Next" = "Next";
"Previous" = "Previous";
"My position" = "My position";
"Searching for '%@'" = "Searching for '%@'";
"Cancel" = "Cancel";
"Select Venue" = "Select Venue";
"Search Result" = "Search Result";
"Avoid stairs" = "Avoid stairs";
"Sorry, failed to get app content..." = "Sorry, failed to get app content...";
"Sorry, failed to get locations..." = "Sorry, failed to get locations...";
"Sorry, failed to get location details..." = "Sorry, failed to get location details...";
"Sorry, failed to get directions..." = "Sorry, failed to get directions...";
"Get directions" = "Directions";
"Zoom for more details" = "Zoom for more details";
"RETURN TO VENUE" = "RETURN TO VENUE";
"Return to" = "Return to";

"%d min" = "%d min";
"%d h %d min" = "%d h %d min";
"%d d %d h %d min" = "%d d %d h %d min";

"walk" = "walk";
"by car" = "by car";
"transit" = "transit";
"by transit" = "by transit";
"by bike" = "by bike";

"Get feedback?" = "Got feedback?";
"Need help?" = "Need help?";
"Send us an email" = "Send us an email";
"Please enable WIFI" = "Please enable WIFI";
"In order to determine your position WIFI must be enabled and the phone must be connected to the Wifi network" = "In order to determine your position WIFI must be enabled and the phone must be connected to the Wifi network";

"Welcome to the map service of MapsPeople" = "Welcome to the map service of MapsPeople";
"Buildings and rooms are being loaded" = "Buildings and rooms are being loaded";

"No matches for \"%@\"" = "No matches for \"%@\"";
"No locations to show" = "No locations to show";
"Use the search to search across\n%@" = "Use the search to search across\n%@";
"Use the searchfield at the top to search across\n%@" = "Use the searchfield at the top to search across\n%@";
"Search for locations indoors and outdoors" = "Search for locations indoors and outdoors";
"No route found" = "No route found"; 

// App Information screen:
"App Information" = "App Information";
"App Version" = "App Version";
"Credits" = "Credits";
"License: %@" = "License: %@";
"App" = "App";
"SDK" = "SDK";
"Supplier" = "Supplier";

// Location services alerts
"Location Services are disabled" = "Location Services are disabled";
"Please turn on your phone's location services from privacy settings for us to determine your location." = "Please turn on your phone's location services from privacy settings for us to determine your location.";
"Please turn on location services for %@ to determine your location." = "Please turn on location services for %@ to determine your location.";
"Turn On" = "Turn On";
"Turn on location services to get your estimated position" = "Turn on location services to get your estimated position";
"Turn on location services" = "Turn on location services";

//
"Clear Map" = "Clear Map";

// Transit sources:
"Tickets and information (%@)" = "Tickets and information (%@)";
"Tickets and information" = "Tickets and information";

// Floating action menu
"Find" = "Find";

// Offline UI
"No internet, unable to update map" = "No internet, unable to update map";
"OFFLINE - TRY TO RECONNECT" = "OFFLINE - TRY TO RECONNECT";
"OFFLINE - Previously loaded content available" = "No internet - Content from last use is available";
"OFFLINE - Failed to get app content" = "OFFLINE - Failed to get app content";
"No Internet" = "No Internet";
"kLangNoInternetMessage" = "Your device appears to be offline.\nPlease disable flight mode or enable WiFi\n\nMoving to an alternate location can also improve the network connectivity";
"No Internet - No Google results" = "No Internet - not showing Google results";

// Directions panel
"▼ Directions" = "▼ Directions";
"▲ Directions" = "▲ Directions";
"Level %@ to %@" = "Level %@ to %@";
"Enter" = "Enter";
"Exit" = "Exit";
"Stairs" = "Stairs";
"Ladder" = "Ladder";
"Start" = "Start";
"End" = "End";
"Walk" = "Walk";
"Bike" = "Bike";
"Drive" = "Drive";
"Transit" = "Transit";
"Turn left" = "Turn left";
"Turn right" = "Turn right";
"Turn sharp left" = "Turn sharp left";
"Turn sharp right" = "Turn sharp right";
"Turn slight left" = "Turn slight left";
"Turn slight right" = "Turn slight right";
"Turn around" = "Turn around";
"Continue straight ahead" = "Continue straight ahead";

// Transit sources
"Website" = "Website";
"Phone" = "Phone";
"Open in Safari ?" = "Open in Safari ?";
"Open" = "Open";
"Phone number copied to clipboard" = "Phone number copied to clipboard";

// Directions
"%d stops (%@)" = "%d stops (%@)";
"Duration estimate not available" = "Duration estimate not available";
"Please choose starting point" = "Please choose starting point";
"Please choose destination"    = "Please choose destination";

// Accessibility strings
"Exit venue selector" = "Exit venue selector";
"Current Venue" = "Current Venue";
"Show Category" = "Show Category";
"%@ Results available" = "%@ Results available";
"Back" = "Back";
"Select route origin" =      "Select route origin";
"Select route destination" = "Select route destination";
"Swap route start and destination" = "Swap route start and destination";
"Avoid Stairs On, double tap to change."  = "Avoid Stairs On, double tap to change.";
"Avoid Stairs Off, double tap to change." = "Avoid Stairs Off, double tap to change.";
"Route available : %@" = "Route available : %@";
"Finding Route" = "Finding Route";
"Show Side Bar Menu" = "Show Side Bar Menu";
"Hide Side Bar Menu" = "Hide Side Bar Menu";
"Select Floor %@" = "Select Floor %@";
"Find nearest shortcut menu" = "Find nearest shortcut menu";
"Show Category: %@" = "Show Category: %@";
"Tracking disabled"        = "Tracking disabled"       ;
"Tracking Off"             = "Tracking Off"            ;
"Tracking On"              = "Tracking On"             ;
"Tracking On With Heading" = "Tracking On With Heading";
"Change tracking options"  = "Change tracking options";
"Show App Information" = "Show App Information";
"Drive %@ stops with public transport, %@ %@"   = "Drive %@ stops with public transport, %@ %@";
"Walk"                                          = "Walk"                                       ;
"Bike"                                          = "Bike"                                       ;
"Drive"                                         = "Drive"                                      ;
"Start Route from %@, "                         = "Start Route from %@, "                      ;
"Continue Route from %@, "                      = "Continue Route from %@, "                   ;
"towards %@, "                                  = "towards %@, "                               ;
"towards destination %@, "                      = "towards destination %@, "                   ;
"Route instructions %@ to %@ of %@"             = "Route instructions %@ to %@ of %@";
"My Location"                                   = "My Location";
"My location, accuracy %@m"                     = "My location, accuracy %@m";

"Go" = "Go";
"Enter solution-Id or API-key" = "Enter API-key";
"Oops. Please try again." = "Oops. Please try again.";
"Log out" = "Log out";

// App User Roles
"Choose the App User Roles you are part of. This only affacts the directions you get, not the locations you see on the map" = "Choose the App User Roles you are part of. This affects the directions you get, and the locations you see on the map";
"Route Settings" = "Route Settings";
"Settings" = "Settings";
"App User Roles" = "App User Roles";

//App Info
"impressum" = "Impressum";
"privacy" = "Privacy";

// Booking related:
"Booked from %@" = "Booked from %@";
"Oops - something went wrong getting the calendar for %@" = "Oops - something went wrong getting the calendar for %@";
"Book" = "Book";
"Booking" = "Booking";
"Cancelling" = "Cancelling";
"Booked" = "Booked";
