...
                                                        <rect key="frame" x="52" y="5" width="49" height="31"/>
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    </switch>
                                                </subviews>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                            </view>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" image="empty_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="SWX-nr-rHE">
                                                <rect key="frame" x="22" y="85" width="18" height="18"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="SWX-nr-rHE" secondAttribute="height" multiplier="1:1" id="3Bu-DF-U1B"/>
                                                    <constraint firstAttribute="width" constant="18" id="rxu-X9-nJ7"/>
                                                </constraints>
                                            </imageView>
...
                                                    <constraint firstAttribute="width" secondItem="Jn6-Fy-NNZ" secondAttribute="height" multiplier="1:1" id="680-GG-qcI"/>
                                                    <constraint firstAttribute="width" constant="18" id="Vwg-E5-HL1"/>
                                                </constraints>
                                            </imageView>
                                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="250" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5B6-kR-Nt8">
                                                <rect key="frame" x="55" y="79" width="289" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="chooseStartingPointButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="40" id="NrC-01-xvJ"/>
                                                </constraints>
                                                <state key="normal" title="Origin">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LqS-4Y-pfm">
                                                <rect key="frame" x="340" y="86" width="35" height="61"/>
                                                <accessibility key="accessibilityConfiguration" identifier="switchDirButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="35" id="QII-px-WAL"/>
                                                    <constraint firstAttribute="height" constant="61" id="ZMg-gr-NtL"/>
                                                </constraints>
                                            </button>
                                        </subviews>
...
