/* 
  Localizable.strings
  MapsIndoors

  Created by Daniel Nielsen on 15/08/16.
  Copyright © 2016 MapsPeople A/S. All rights reserved.
*/
"Lang" = "en";
"Building" = "Building";
"Floor" = "Floor";
"Level" = "Level";
"Level %@" = "Level %@";
"Please enable WIFI" = "Please enable WIFI";
"OK" = "OK";
"Get directions" = "Get directions";
"Origin" = "Starting point";
"Destination" = "Destination";
"Choose destination" = "Choose destination.";
"Choose starting point" = "Choose starting point.";
"Please review your selections and try again" = "Please review your selections and try again.";
"Chosen position" = "Chosen position";
"Room ID" = "Room ID";
"Mark a position" = "Mark a position";
"Use this position" = "Use this position?";
"Map" = "Map";
"Language" = "Language/Sprog";
"Danish" = "Dansk";
"English" = "English";
"Where am I" = "Where am I?";
"Staircase" = "Stairs";
"Elevator" = "Elevator";
"Categories" = "Categories";
"Search" = "Search";
"Search %@" = "Search %@";
"Show" = "Show";
"Show on map" = "Show on map";
"Showing route..." = "Showing route...";
"%d minutes walk" = "%d minutes walk";
"From" = "From";
"To" = "To";
"Next" = "Next";
"Previous" = "Previous";
"Report this location" = "Report this location?";
"Tap to compose email" = "Tap to compose email";
"My position" = "My position";
"Nearby search" = "Nearby search";
"Add" = "Add";
"Type" = "Type";
"No data is available" = "No data is available";
"Find nearest" = "Find nearest";
"Details" = "Details";
"Compass" = "Compass";
"Satellite" = "Satellite";
"Favourites" = "Favourites";
"Track my position" = "Track my position";
"Use positioning" = "Use positioning";
"Arrival" = "Arrival";
"Departure" = "Departure";
"Show all" = "Show all";
"Open menu" = "Open menu";
"Close menu" = "Close menu";
"Menu" = "Menu";
"Use elevators" = "Use elevators";
"Nearest" = "Nearest";
"Tap on the map to mark a location" = "Tap on the map to mark a location";
"My position" = "My position";
"Direction" = "Direction";
"Unfortuneately no locations are available" = "Unfortuneately no locations are available.";
"Could not find any route" = "Could not find any route.";
"Please select both a starting point and a destination" = "Please select both a starting point and a destination.";
"Searching for" = "Searching for";
"Searching for '%@'" = "Searching for '%@'";
"Switch direction" = "Switch direction";
"Reportsuggest location" = "Report/suggest location";
"Tap on the map to mark a suggestion for a new location" = "Tap on the map to mark a suggestion for a new location.";
"Cancel" = "Cancel";
"Select Venue" = "Select Venue";
"Search Result" = "Search Result";
"Clear map" = "Clear map";
"Language has been changed" = "Language has been changed";
"Restart app and switch language" = "Restart app and switch language?";
"Language switch requires app restart" = "Language switch requires app restart. If you don't want to restart tap cancel";
"Avoid stairs" = "Avoid stairs";
"Sorry, failed to get app content..." = "Sorry, failed to get app content...";
"Sorry, failed to get locations..." = "Sorry, failed to get locations...";
"Sorry, failed to get location details..." = "Sorry, failed to get location details...";
"Sorry, failed to get directions..." = "Sorry, failed to get directions...";
